--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
             <li class="nav__item">
               <a href="#contact" class="nav__link">
-                <i class="uil uil-message nav__icon"></i>Contact Us
+                <i class="uil uil-message nav__icon"></i>Contact Me
               </a>
             </li>
           </ul>
@@ -423,7 +423,7 @@
         </div>
       </section>
       <!-- ------------- QUALIFICATIONS (Education and Experience) -------------------->
-      <section class="qualification section" id="qualification">
+      <section class="qualification section" id="qualifications">
         <h2 class="section__title">Qualification</h2>
         <span class="section__subtitle"> My persoanl Journey </span>
 
