--- a/index.html
+++ b/index.html
@@ -885,10 +885,36 @@
                 <span class="blog-slider__code"> December 2021</span>
                 <div class="blog-slider__title">Headphones Page</div>
                 <div class="blog-slider__text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam magnam excepturi corporis expedita animi in eveniet, natus explicabo tenetur?
+                  A responsive Headphones Website using SCSS.
                 </div>
                 <a
                   href="https://philoibrahim.github.io/headphones-Design/"
+                  target="_blank"
+                  class="button blog-slider__button button--flex"
+                >
+                  Demo
+                  <i class="uil uil-play button__icon"></i>
+                </a>
+              </div>
+            </div>
+
+            <!-- For portfolio item 2 -->
+            <div class="blog-slider__item swiper-slide">
+              <div class="blog-slider__img">
+                <img
+                  src="assets/img/portfolio/valcare.png"
+                  alt="Headphones Design"
+                />
+              </div>
+
+              <div class="blog-slider__content">
+                <span class="blog-slider__code"> March 2022</span>
+                <div class="blog-slider__title">VALCARE Hospital</div>
+                <div class="blog-slider__text">
+                  A Hospital Website called (VALCARE) using HTML, Javascript, and SCSS. It's responsive too.
+                </div>
+                <a
+                  href="https://philoibrahim.github.io/VALCARE/"
                   target="_blank"
                   class="button blog-slider__button button--flex"
                 >
