--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
               <div class="card_skill shadow2">
                 <div class="imgBx">
                   <img
-                    src="https://res.cloudinary.com/bjha/image/upload/v1627831745/skillset%20logos/python-seeklogo.com_sbuevg.svg"
+                    src="assets/img/jquery-seeklogo.com.svg"
                     alt="HTML logo"
                   />
                 </div>
