--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
 
               <div>
                 <h3 class="contact__title">Call Me</h3>
-                <span class="contact__subtitle">+20-01273255310</span>
+                <span class="contact__subtitle">+20-1273255310</span>
               </div>
             </div>
 
@@ -1065,7 +1065,7 @@
               <div>
                 <h3 class="contact__title">Address</h3>
                 <span class="contact__subtitle">
-                  El-Sadat city, Menoufia - Egypt</span
+                  Fatma El-Zahraa Rd, Nasr City</span
                 >
               </div>
             </div>
